<resources>
    <string name="app_name">智能钮扣分选机控制终端(17.1.8)</string>
    <string name="title_activity_home_acitivity">HomeAcitivity</string>
    <string name="status_window">状态窗口</string>
    <string name="qualified_rate">合格率：</string>
    <string name="qualified">合格：</string>
    <string name="unqualified">不合格：</string>

    <!-- 菜单名称 -->
    <string name="title_activity_file_manager">文件管理</string>
    <string name="title_activity_camera_params">相机参数</string>
    <string name="title_activity_sys_settings">系统设置</string>
    <string name="title_activity_statics_settings">统计分析</string>
    <string name="title_activity_machine_learning">机器学习</string>
    <string name="title_activity_esc">退出</string>
    <string name="title_activity_help">帮助</string>
    <string name="title_activity_debug_mode">调试模式</string>
    <string name="title_activity_button_search">钮扣选择</string>
    <string name="title_activity_alg_search">算法配置</string>


    <!-- 文件管理菜单 -->
    <string-array name="option_file_manager">
        <item>一键导出钮扣数据库</item>
        <item>手动导出钮扣数据库</item>
        <item>一键导入钮扣数据库</item>
        <item>手动导入钮扣数据库</item>
        <item>内存及SD卡使用情况</item>
        <item>退出系统</item>
    </string-array>

    <!-- 统计分析菜单 -->
    <string-array name="option_count_num">
        <item>检测数量</item>
        <item>缺陷类型</item>
    </string-array>



    <!-- 系统设置→设备参数设置内容 -->
    <string-array name="device_setting">
        <item>MT9V032</item>
        <item>ISL12026</item>
        <item>AT25040</item>
    </string-array>

    <!-- 系统设置→波特率参数设置内容 -->
    <string-array name="uart_baudrate">
        <item>115200</item>
        <item>19200</item>
        <item>9600</item>
    </string-array>

    <!-- 系统设置→校验模式参数设置内容 -->
    <string-array name="parity">
        <item>无校验</item>
        <item>奇校验</item>
        <item>偶校验</item>
    </string-array>

    <!-- 系统设置→数据位数参数设置内容 -->
    <string-array name="data_len">
        <item>5位</item>
        <item>6位</item>
        <item>7位</item>
        <item>8位</item>
    </string-array>

    <!-- 系统设置→停止位参数设置内容 -->
    <string-array name="stop_bit">
        <item>1位</item>
        <item>2位</item>
    </string-array>

    <!-- 系统设置→停止位参数设置内容 -->
    <string-array name="hecc_baurate">
        <item>1M</item>
    </string-array>

    <!-- 设备参数设置之常规→Input type -->
    <string-array name="device_setting_input_type">
        <item>ICX414AL</item>
    </string-array>
    <string-array name="device_setting_output_type">
        <item>net</item>
    </string-array>

    <!--&lt;!&ndash; 钮扣材料 &ndash;&gt;-->
    <!--<string-array name="button_material">-->
        <!--<item>树脂</item>-->
        <!--<item>果实</item>-->
        <!--<item>贝壳</item>-->
        <!--<item>金属</item>-->
        <!--<item>玉石</item>-->
    <!--</string-array>-->

    <!--&lt;!&ndash; 钮扣形状 &ndash;&gt;-->
    <!--<string-array name="button_shape">-->
        <!--<item>圆形</item>-->
        <!--<item>心形</item>-->
        <!--<item>三角形</item>-->
        <!--<item>方形</item>-->
        <!--<item>五角形</item>-->
        <!--<item>梅花形</item>-->
        <!--<item>异形</item>-->
    <!--</string-array>-->

    <!--&lt;!&ndash; 钮扣颜色 &ndash;&gt;-->
    <!--<string-array name="button_color">-->
        <!--<item>白色</item>-->
        <!--<item>红色</item>-->
        <!--<item>橙色</item>-->
        <!--<item>黄色</item>-->
        <!--<item>绿色</item>-->
        <!--<item>青色</item>-->
        <!--<item>蓝色</item>-->
        <!--<item>紫色</item>-->
        <!--<item>黑色</item>-->
    <!--</string-array>-->

    <!--&lt;!&ndash; 钮扣纹理 &ndash;&gt;-->
    <!--<string-array name="button_pattern">-->
        <!--<item>纯色</item>-->
        <!--<item>拼色</item>-->
        <!--<item>花纹</item>-->
        <!--<item>字符</item>-->
        <!--<item>图案</item>-->
    <!--</string-array>-->

    <!--&lt;!&ndash; 线孔数目 &ndash;&gt;-->
    <!--<string-array name="button_hole_num">-->
        <!--<item>2</item>-->
        <!--<item>4</item>-->
    <!--</string-array>-->

    <!--&lt;!&ndash; 透光形 &ndash;&gt;-->
    <!--<string-array name="button_light">-->
        <!--<item>透明</item>-->
        <!--<item>半透明</item>-->
        <!--<item>不透明</item>-->
    <!--</string-array>-->

</resources>
