<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:hy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgd_color"
    android:orientation="vertical">

    <!-- 图片显示区域 -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#b6b6b6">

        <TextView
            android:id="@+id/logo_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textSize="40sp" />

        <ImageView
            android:layout_width="70dp"
            android:layout_height="90dp"
            android:layout_marginRight="20dp"
            android:layout_toLeftOf="@id/logo_title"
            android:src="@mipmap/hust" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:background="@drawable/bg_state">

                <!-- 左侧相机1区域 -->

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingBottom="5dp">

                    <TextView
                        android:id="@+id/net_link1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="30dp"
                        android:text="相机1 未连接"
                        android:textColor="#5c5c5e"
                        android:textSize="30sp" />

                    <ImageView
                        android:layout_width="300dp"
                        android:layout_height="300dp"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:background="@drawable/bg_state" />

                    <ImageView
                        android:id="@+id/main_imv_photo1"
                        android:layout_width="200px"
                        android:layout_height="200px"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:src="@mipmap/qualified" />

                    <ImageView
                        android:id="@+id/main_imv_result1"
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:layout_below="@id/main_imv_photo1"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:layout_marginTop="60dp"
                        android:scaleType="fitCenter"
                        android:src="@mipmap/ic_correct" />
                </RelativeLayout>

                <!-- 右侧相机2区域 -->

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingBottom="5dp">

                    <TextView
                        android:id="@+id/net_link2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="30dp"
                        android:text="相机2 未连接"
                        android:textColor="#5c5c5e"
                        android:textSize="30sp" />

                    <ImageView
                        android:layout_width="300dp"
                        android:layout_height="300dp"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:background="@drawable/bg_state" />

                    <ImageView
                        android:id="@+id/main_imv_photo2"
                        android:layout_width="200px"
                        android:layout_height="200px"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:src="@mipmap/qualified" />

                    <ImageView
                        android:id="@+id/main_imv_result2"
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:layout_below="@id/main_imv_photo2"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:layout_marginTop="60dp"
                        android:scaleType="fitCenter"
                        android:src="@mipmap/ic_wrong" />
                </RelativeLayout>

                <!-- 左侧相机1区域 -->

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingBottom="5dp">

                    <TextView
                        android:id="@+id/net_link3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="30dp"
                        android:text="相机3 未连接"
                        android:textColor="#5c5c5e"
                        android:textSize="30sp" />

                    <ImageView
                        android:layout_width="300dp"
                        android:layout_height="300dp"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:background="@drawable/bg_state" />

                    <ImageView
                        android:id="@+id/main_imv_photo3"
                        android:layout_width="200px"
                        android:layout_height="200px"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:src="@mipmap/qualified" />

                    <ImageView
                        android:id="@+id/main_imv_result3"
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:layout_below="@id/main_imv_photo3"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:layout_marginTop="60dp"
                        android:scaleType="fitCenter"
                        android:src="@mipmap/ic_correct" />
                </RelativeLayout>


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.hanyu.hust.testnet.ui.view.TitleDivide
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                hy:text=""
                hy:textSize="@dimen/pannel_menu" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_control_start"
                    style="@style/control_button"
                    android:layout_width="0px"
                    android:layout_weight="1"
                    android:enabled="true"
                    android:text="启动" />

                <Button
                    android:id="@+id/bt_control_stop"
                    style="@style/control_button"
                    android:layout_width="0px"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:text="停止" />
            </LinearLayout>

            <com.hanyu.hust.testnet.ui.view.TitleDivide
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                hy:text=""
                hy:textSize="@dimen/pannel_menu" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/iv_button_check"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:scaleType="fitXY"
                    android:src="@mipmap/qualified" />

                <TextView
                    android:id="@+id/tv_button_id"
                    android:layout_width="120px"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/pannel_content" />

                <Button
                    android:id="@+id/bt_search"
                    style="@style/bt_frgment_style"
                    android:layout_width="88px"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="0dp"
                    android:text="选择钮扣"
                    android:textSize="@dimen/pannel_content" />
            </LinearLayout>


            <com.hanyu.hust.testnet.ui.view.TitleDivide
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/pannel_bottom_margin"
                android:layout_marginTop="@dimen/pannel_top_margin"
                hy:text="实时状态"
                hy:textSize="@dimen/pannel_menu" />

            <TextView
                android:id="@+id/realTimeStatus_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_state"
                android:textSize="15px" />
        </LinearLayout>
    </LinearLayout>

    <!-- 状态窗口 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="00dp"
        android:layout_weight="1"
        android:background="@drawable/bg_state"
        android:orientation="horizontal"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="8">

            <TextView
                android:id="@+id/tv_btn_pos_sum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="正品: "
                android:textSize="55sp" />

            <TextView
                android:id="@+id/tv_btn_neg_sum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="次品: "
                android:textSize="55sp" />

            <TextView
                android:id="@+id/tv_btn_sum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="总计: "
                android:textSize="55sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_size_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="尺寸信息"
                android:textSize="20px" />

            <Button
                android:id="@+id/btn_more"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="数量信息"
                android:textSize="20px" />

            <Button
                android:id="@+id/btn_other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="其它设置"
                android:textSize="20px" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingLeft="20dp"
        android:paddingRight="15dp"
        android:paddingTop="8dp">

        <Button
            android:id="@+id/main_bt_file_manager"
            style="@style/bt_bottom"
            android:layout_marginLeft="0dp"
            android:text="@string/title_activity_file_manager" />


        <Button
            android:id="@+id/main_bt_statistics"
            style="@style/bt_bottom"
            android:text="@string/title_activity_statics_settings" />

        <Button
            android:id="@+id/main_bt_machine_learning"
            style="@style/bt_bottom"
            android:text="@string/title_activity_machine_learning" />

        <Button
            android:id="@+id/main_bt_sys_config"
            style="@style/bt_bottom"
            android:text="@string/title_activity_sys_settings" />

        <Button
            android:id="@+id/main_bt_help"
            style="@style/bt_bottom"
            android:text="@string/title_activity_help" />

        <Button
            android:id="@+id/main_bt_esc"
            style="@style/bt_bottom"
            android:text="@string/title_activity_esc" />
    </LinearLayout>

</LinearLayout>